examples/test/testpolicy19961.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19961
  namespace: namespace347
spec:
  podSelector:
    matchLabels:
      key33: value21
      key16: value8
      key19: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value19
      podSelector:
        matchLabels:
          key39: value34
          key49: value4
          key1: value6
